--- a/error.html
+++ b/error.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    
     <header>
         <h1>Error</h1>
         <nav>
@@ -18,9 +19,10 @@
             </ul>
         </nav>
     </header>
-    <main>
+    <main class="main">
         <p>Oops! Something went wrong.</p>
-    </main>
+    </main >
+    
     <footer>
         <p>© 2024 Math Quiz</p>
     </footer>
