--- a/index.html
+++ b/index.html
@@ -18,9 +18,10 @@
             </ul>
         </nav>
     </header>
-    <main>
+    <main class="main">
         <p>This is the home page content.</p>
     </main>
+    
     <footer>
         <p>© 2024 Math Quiz</p>
     </footer>
