--- a/about.html
+++ b/about.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    
     <header>
         <h1>About Us</h1>
         <nav>
@@ -18,9 +19,10 @@
             </ul>
         </nav>
     </header>
-    <main>
+    <main class="main">
         <p>This is the about page content.</p>
     </main>
+    
     <footer>
         <p>© 2024 Math Quiz</p>
     </footer>
