--- a/login.html
+++ b/login.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+
     <header>
         <h1>Login</h1>
         <nav>
@@ -18,13 +19,14 @@
             </ul>
         </nav>
     </header>
-    <main>
+    <main class="main">
         <form action="/login" method="post">
             <input type="text" name="username" placeholder="Username" required>
             <input type="password" name="password" placeholder="Password" required>
             <button type="submit">Login</button>
         </form>
     </main>
+    
     <footer>
         <p>© 2024 Math Quiz</p>
     </footer>
