--- a/about.html
+++ b/about.html
@@ -12,6 +12,7 @@
         <h1>About Us</h1>
         <nav>
             <ul>
+                <li><a href="/quizzme.html"><b>QuizzME</b></li>
                 <li><a href="/index.html"><b>Home</b></li>
                 <li><a href="/about.html"><b>About</b></a></li>
                 <li><a href="/login.html"><b>Login</b></a></li>
@@ -24,7 +25,7 @@
     </main>
     
     <footer>
-        <p>© 2024 Math Quiz</p>
+        <p>© 2024 QuizzME</p>
     </footer>
 </body>
 </html>
