--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to Math Quiz</h1>
+        <h1>Welcome to QuizzME</h1>
         <nav>
             <ul>
+                 <li><a href="/quizzme.html"><b>QuizzME</b></li>
                 <li><a href="/index.html"><b>Home</b></li>
                 <li><a href="/about.html"><b>About</b></a></li>
                 <li><a href="/login.html"><b>Login</b></a></li>
@@ -23,7 +24,7 @@
     </main>
     
     <footer>
-        <p>© 2024 Math Quiz</p>
+       <p>© 2024 QuizzME</p>
     </footer>
 </body>
 </html>
