--- a/quizzme.html
+++ b/quizzme.html
@@ -3,13 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login Page</title>
+    <title>Home Page</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-
     <header>
-        <h1>Login</h1>
+         <h1>Welcome to QuizzME</h1>
         <nav>
             <ul>
                 <li><a href="/quizzme.html"><b>QuizzME</b></li>
@@ -21,11 +20,7 @@
         </nav>
     </header>
     <main class="main">
-        <form action="/login" method="post">
-            <input type="text" name="username" placeholder="Username" required>
-            <input type="password" name="password" placeholder="Password" required>
-            <button type="submit">Login</button>
-        </form>
+        <p>QuizzME</p>
     </main>
     
     <footer>
