styling buttons and fields

--- a/about.html
+++ b/about.html
@@ -9,7 +9,6 @@
 <body>
     
     <header>
-        <h1>About Us</h1>
         <nav>
             <ul>
                 <li><a href="/quizzme.html"><b>QuizzME</b></li>
@@ -20,8 +19,9 @@
             </ul>
         </nav>
     </header>
+    <h2>About QuizzME</h2>
     <main class="main">
-        <p>This is the about page content.</p>
+        <p>The about page content.</p>
     </main>
     
     <footer>
