--- a/quizzme.html
+++ b/quizzme.html
@@ -8,7 +8,6 @@
 </head>
 <body>
     <header>
-         <h1>Welcome to QuizzME</h1>
         <nav>
             <ul>
                 <li><a href="/quizzme.html"><b>QuizzME</b></li>
@@ -20,7 +19,8 @@
         </nav>
     </header>
     <main class="main">
-        <p>QuizzME</p>
+        <p>Welcome to QuizzME</p>
+        <p id="landing">Landing Page</p>
     </main>
     
     <footer>
