--- a/login.html
+++ b/login.html
@@ -9,7 +9,6 @@
 <body>
 
     <header>
-        <h1>Login</h1>
         <nav>
             <ul>
                 <li><a href="/quizzme.html"><b>QuizzME</b></li>
@@ -20,11 +19,12 @@
             </ul>
         </nav>
     </header>
+    <h2>Login</h2>
     <main class="main">
         <form action="/login" method="post">
-            <input type="text" name="username" placeholder="Username" required>
-            <input type="password" name="password" placeholder="Password" required>
-            <button type="submit">Login</button>
+            <input type="text" name="username" placeholder="Username" required><br>
+            <input type="password" name="password" placeholder="Password" required><br>
+            <button class="btn" type="submit">Login</button>
         </form>
     </main>
     
