--- a/login.html
+++ b/login.html
@@ -25,6 +25,7 @@
             <input type="text" name="username" placeholder="Username" required><br>
             <input type="password" name="password" placeholder="Password" required><br>
             <button class="btn" type="submit">Login</button>
+            <P id="p-link">No account <a href="/register.html">Register</a> </P>
         </form>
     </main>
     
