--- a/index.html
+++ b/index.html
@@ -1,30 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>QuizzME</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="/css/contact.css">
 </head>
+
 <body>
     <header>
-        <nav>
+        <nav class="navbar">
             <ul>
-                 <li><a href="/quizzme.html"><b>QuizzME</b></li>
+                <li><a href="/quizzme.html"><b>QuizzME</b></li>
                 <li><a href="/index.html"><b>Home</b></li>
                 <li><a href="/about.html"><b>About</b></a></li>
-                <li><a href="/login.html"><b>Login</b></a></li>
-                <li><a href="/register.html"><b>Register</b></a></li>
+                <li><a href="/help.html"><b>Help</b></a></li>
+                <div class="float-right">
+                    <li><a href="/login.html"><b>Login</b></a></li>
+                    <li><a href="/register.html"><b>Register</b></a></li>
+                </div>
             </ul>
         </nav>
     </header>
+    <div class="bg-image"></div>
     <main class="main">
-        <h3>Welcome to QuizzME</h3>
-        <p>This is the home page content.</p>
+
+        <div>
+            <h1>Home</h1>
+
+        </div>
+
     </main>
-    
+
     <footer>
-       <p>© 2024 QuizzME</p>
+        <p>© 2024 QuizzME</p>
     </footer>
 </body>
+
 </html>
