--- a/help.html
+++ b/help.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Register Page</title>
+    <title>Help</title>
     <link rel="stylesheet" href="/css/contact.css">
 </head>
 
@@ -24,24 +24,29 @@
         </nav>
     </header>
     <div class="bg-image"></div>
-    <!-- <h2>Register</h2> -->
+    <!-- <h2>Error</h2> -->
     <main class="main-panel">
         <section id="contact" class="contact">
             <div class="container">
-                <form id="loginForm" action="/register.html" method="post">
-                    <div id="inputs">
-                        <h1>Register</h1>
-                        <input type="text" name="userName" placeholder="Username" required>
-                        <input type="password" name="password" placeholder="Password">
-                        <input type="password" name="confirmPassword" placeholder="Confirm Password" required>
-                        <button class="btn" type="submit">Register</button>
-                    </div>
-                </form>
-            </div>
-        </section>
-        </div>
-    </main>
+                <h1>Contact Us</h1>
+                <form id="contactForm" action="/help.html" method="post">
+                    <label for="name">Name:</label>
+                    <input type="text" id="name" name="name" required>
 
+                    <label for="email">Email:</label>
+                    <input type="email" id="email" name="email" required>
+
+                    <label for="message">Message:</label>
+                    <textarea id="message" name="message" required></textarea>
+
+                    <button type="submit">Submit</button>
+                </form>
+                <div id="response"></div>
+            </div>
+
+        </section><!-- End Contact Section -->
+    </main>
+    <script src="/js/contact.js"></script>
     <footer>
         <p>© 2024 QuizzME</p>
     </footer>
